feat: setup folder structure and initial DB configuration

--- a/progresssoft-task.Server/appsettings.json
+++ b/progresssoft-task.Server/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Default": "Data Source=DESKTOP-SB4R80I;Initial Catalog=DB;Integrated Security=SSPI;TrustServerCertificate=true;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
